cleanup before rewrite

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 <body>
   <h1>Cat Clicker</h1>
 
+  <ul id="cats-list">
+  </ul>
+
   <div id="cats">
-    
+    please select a cat...
   </div>  
 
   <script src="app.js"></script>
