--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
 
   <div id="cats">
     please select a cat...
-  </div>  
+  </div>
 
+  <script type="text/template" data-template="cat">
+    <hr>
+    <div class="cat" id="{{name}}">
+      <p>Count for {{name}}: <span class="count">{{count}}</span></p>
+      <img src="{{img}}" alt="cat">
+    </div>
+  </script>
+
+  <script type="text/template" data-template="list">
+    <li id="list-{{name}}">{{name}}</li>
+  </script>
+
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
