--- a/index.html
+++ b/index.html
@@ -9,12 +9,43 @@
   <ul id="cats-list">
   </ul>
 
+  <hr>
+
   <div id="cat">
     please select a cat...
   </div>
+  
+  <hr>
+  
+  <div id="admin">
+    <button id="admin-btn">Admin</button>
+    <div id="admin-form">
+      
+    </div>
+  </div>
+
+
+
+  <script type="text/template" data-template="admin">
+    <div>
+      <label>Name
+        <input type="text" id="new-name" value="{{name}}">
+      </label>
+
+      <label>Url
+        <input type="text" id="new-img" value="{{img}}">
+      </label>
+
+      <label>Click Count
+        <input type="text" id="new-count" value="{{count}}">
+      </label>
+
+      <button id="cancel">Cancel</button>
+      <button id="save">Save</button>
+    </div>
+  </script>
 
   <script type="text/template" data-template="cat">
-    <hr>
     <div class="cat" id="{{name}}">
       <p>Count for {{name}}: <span class="count">{{count}}</span></p>
       <img src="{{img}}" alt="cat">
